Fixed main alignment on small devices

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,7 +49,7 @@ header {
 }
 
 main {
-  padding: 4rem;
+  padding: 4rem 0;
   // height: 100%;
   min-height: calc(100vh - 60px);
 
